@@ -25,5 +25,5 @@ public @interface EnumVal {
    *
    * @return the simple names of the possible enum values for an expression with the annotated type
    */
-  String[] value() default {};
+  String[] value();
 }
