@@ -11,6 +11,9 @@ internally during whole-program inference.
 The Optional Checker supports a new annotation `@OptionalBottom` that
 stands for (only) the `null` value.
 
+The `value` element/argument to `@EnumVal` is now required.  Previously it
+defaulted to an empty array.
+
 **Implementation details:**
 
 A precondition or normal postcondition annotation's `value` element must have
